--- a/music/pop.html
+++ b/music/pop.html
@@ -60,7 +60,8 @@
                       </div>
                   </div>. La musique
                   pop a bien évolué depuis cette époque.
-                  La pop est une version plus douce et mélancolique du<a href="http://wildgoat.fr/pulse/music/rock.html#"> rock </a>. C’est un genre musical accessible au
+                  La pop est une version plus douce et mélancolique du
+                  <a href="rock.html#">rock</a>. C’est un genre musical accessible au
                   grand public.
                   Elle se caractérise par des mélodies et harmonies vocaliques. Elle pioche ses influences dans
                   différents styles ( R&B, jazz, folk, soul, funk, classique, techno, latino…). Les chanteurs
@@ -90,10 +91,12 @@
                       </div>
                   </div>
                   comme la plus belle chanson d’amour jamais écrite.
+                
               </div>
               <p>
                   Le style de musique s'est divisé au fil du temps en plusieurs sous-genres (liste non exhaustive) :
-              </p>
+              </p> 
+               <span class="source">Source : dude trust me</span>
               <ul>
                   <li>
                       <a href="#Classic">Classic pop</a>
@@ -137,6 +140,7 @@
                   généralement, le terme "standard" peut être appliqué à toute chanson populaire qui est devenue très
                   largement connue dans la culture traditionnelle.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span> Bob Dylan</span>
@@ -173,6 +177,23 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="Pop rock">
               <h2>
@@ -182,9 +203,11 @@
                   Le pop rock est un genre musical mêlant le style pop et ses paroles légères à des chansons rock
                   typiquement basées sur la guitare. Les détracteurs du pop rock considèrent souvent le genre comme une
                   version plus commerciale et moins authentique du rock.
-                  Il est plus doux et plus accessible que<a href="http://wildgoat.fr/pulse/music/rock.html#">le Rock and Roll </a>  . Les instruments utilisés sont le plus
+                  Il est plus doux et plus accessible que le <a href="rock.html#">Rock and
+                      Roll</a>. Les instruments utilisés sont le plus
                   souvent la guitare électrique, la basse, la batterie, le clavier et le synthétiseur.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -252,6 +275,7 @@
                   traditionnel. La musique pop country regroupe souvent différents genres comme le rock, la pop et le
                   country .
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
                       <span>Merle Haggard</span>
@@ -317,6 +341,30 @@
                           allow="encrypted-media"></iframe>
                   </div>
               </div>
+              <figure class="yt-integ">
+                <div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/vWwgrjjIMXA"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/AbZ3VdYb90o"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/KmxaY_OVvWA"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
           </section>
           <section id="Dream">
               <h2>
@@ -328,6 +376,7 @@
                   Les caractéristiques sonores de la dream pop sont un chant murmuré, ainsi que l'utilisation d'effets
                   de guitare produisant souvent un « mur de bruit ».
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -457,6 +506,7 @@
                   chants sont également inclus, et les paroles sont généralement inspirées de thèmes optimistes comme
                   l’amour.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">Artistes:
 
 
@@ -526,6 +576,7 @@
                   la pointe de la mode". Les chansons sont la plupart du temps des mélanges de pop, rock, hip hop, R&B
                   et de musique électronique.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">
                   Artistes:
 
@@ -606,6 +657,7 @@
                   La pop latino désigne un genre de musique pop dont les éléments sonores sont extraits de musiques
                   latino-américaines. La pop latino s'associe particulièrement à la musique pop, rock et dance.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -630,7 +682,7 @@
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-                  </div>
+              </div>
 
               <div class="spotify-integ">
                   <div>
@@ -668,13 +720,13 @@
               <p>
                   Le genre est moins agressif, moins commercial, mais plus sérieux que la musiquecde l'époque. La
                   pop baroque se différencie du
-                  <a href="#progressif"> rock progressif</a>
-                   , qui fait également usage d'une instrumentation de
+                  <a href="rock.html#progressif">rock progressif</a>, qui fait également usage d'une instrumentation de
                   musique classique, de par sa structure simpliste plus proche de la pop standard, et par son contenu
                   lyrique accessible à tous.
                   La pop baroque est une musique traditionnellement mélancolique et dramatique par rapport au sunshine
                   pop.
               </p>
+              <span class="source">Source : dude trust me</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
