intendation fix on index

--- a/index.html
+++ b/index.html
@@ -25,16 +25,15 @@
         <source src="images/background.mp4" type="video/mp4">
     </video>
     <aside class="navbar">
-            <div>
-                <iframe src="nav.html"></iframe>
-                <img class="mobile" src="images/icons/mobileMenu.png" alt="menu" />
-                <img class="navbar-line computer" src="images/ligne.png" alt="icon navbar" />
-                <img class="navbar-arrow computer" src="images/fleche.png" alt="icon navbar" />
-            </div>
-            <div class="mobile dark-back"></div>
-        </aside>
-        <div class="blank-div">
-    </div>
+        <div>
+            <iframe src="nav.html"></iframe>
+            <img class="mobile" src="images/icons/mobileMenu.png" alt="menu" />
+            <img class="navbar-line computer" src="images/ligne.png" alt="icon navbar" />
+            <img class="navbar-arrow computer" src="images/fleche.png" alt="icon navbar" />
+        </div>
+        <div class="mobile dark-back"></div>
+    </aside>
+    <div class="blank-div"></div>
     <main>
         <section id="pulse_pres">
             <h2>Pulse</h2>
@@ -87,7 +86,7 @@
                     Jusqu’au IX<span class="power">e</span> siècle, l’Église s’efforce d’imposer partout le chant
                     grégorien ou « plain-chant ». Cette musique austère se déploie en amples mélodies monodiques (une
                     seule voix), dont le rythme et les inflexions sont étroitement liés au rythme et aux inflexions du
-                    texte liturgique. C'est aussi au IX<span class="power">e</span> siècle que les premiers essais 
+                    texte liturgique. C'est aussi au IX<span class="power">e</span> siècle que les premiers essais
                     pour noter la musique sont effectués.
                 </p>
                 <span class="source">Source : Symphozik.info</span>
