add aujourd'hui text

--- a/music/pop.html
+++ b/music/pop.html
@@ -91,12 +91,12 @@
                       </div>
                   </div>
                   comme la plus belle chanson d’amour jamais écrite.
-                
+
               </div>
               <p>
                   Le style de musique s'est divisé au fil du temps en plusieurs sous-genres (liste non exhaustive) :
-              </p> 
-               <span class="source">Source : dude trust me</span>
+              </p>
+              <span class="source">Source : dude trust me</span>
               <ul>
                   <li>
                       <a href="#Classic">Classic pop</a>
@@ -178,22 +178,22 @@
                   </div>
               </div>
               <figure class="yt-integ">
-                <div>
-                    <div>
-                        <div>
-                            <iframe src="https://www.youtube-nocookie.com/embed/u6T5C-jzSH0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <iframe src="https://www.youtube-nocookie.com/embed/_uVb7Ju8VQk"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+                  <div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/tT4d1LQy4es"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/WYwMq1VPV7I"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                  </div>
           </section>
           <section id="Pop rock">
               <h2>
@@ -342,29 +342,29 @@
                   </div>
               </div>
               <figure class="yt-integ">
-                <div>
-                    <div>
-                        <div>
-                            <iframe src="https://www.youtube-nocookie.com/embed/vWwgrjjIMXA"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <iframe src="https://www.youtube-nocookie.com/embed/AbZ3VdYb90o"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <iframe src="https://www.youtube-nocookie.com/embed/KmxaY_OVvWA"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+                  <div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/vWwgrjjIMXA"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/AbZ3VdYb90o"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                      <div>
+                          <div>
+                              <iframe src="https://www.youtube-nocookie.com/embed/KmxaY_OVvWA"
+                                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe>
+                          </div>
+                      </div>
+                  </div>
           </section>
           <section id="Dream">
               <h2>
@@ -769,10 +769,18 @@
                       </div>
                   </div>
           </section>
+          <section id="today">
+              <h2>
+               Aujourd'hui  
+              </h2>
+              <div class="paragraph">
+               <p> La Pop a toujours une place importante dans la musique. Nous écoutons la musique pop tous les jours à la télévision, la radio, au concert...La Pop est facile d’accès, ce qui la rend plus populaire dans la vie quotidienne.Les chansons sont jolies et simples, tout le monde peut les écouter et partager leurs émotions sur la musique.
+               <p> La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux types de musique et la mode dans le monde .</p>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
+          </section>
       </main>
       <footer>
           <iframe src="../footer.html"></iframe>
       </footer>
   </body>
-
   </html>
