--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
     <div>
         <h2>Licence :</h2>
         <a href="https://github.com/oxypomme/PT19_20/blob/master/LICENSE" target="_blank">MIT
-            Licence</a>
+            Licence</a> - 2019
     </div>
     <div class="authors">
         <h2>Crédits : </h2>
