rename class img-align

--- a/music/electro.html
+++ b/music/electro.html
@@ -216,7 +216,7 @@
                             Secrets, un featuring avec le dj KSHMR et la chanteuse australienne Vassy.
                         </figcaption>
                     </figure>
-                    <figure class="tiesto">
+                    <figure class="img-align">
                         <img src="../images/tiesto2.jpg" alt="" width="350" class="rounded-corners" />
                         <figcaption>
                             Le dimanche 27 octobre, il est invité au grand prix de Formule 1 du Mexique pour
