--- a/music/rap.html
+++ b/music/rap.html
@@ -93,7 +93,7 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        <figure class="no-overflow float-right bordered columbine">
+                        <figure class="no-overflow float-right bordered img-align">
                             <img src="../images/columbine.jpg" alt="logo columbine" width="200"
                                 class="rounded-corners" />
                             <figcaption>
@@ -189,7 +189,7 @@
                                         class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                             </div>
                         </div>
-                        <figure class="float-right bordered pnl">
+                        <figure class="float-right bordered img-align">
                             <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
                             <figcaption>
                                 La pochette de leur dernier album, deux frères.
