--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>header</title>
+    <title>footer</title>
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=max-device-width, initial-scale=1" />
     <base target="_parent" />
