added eponym albums alt.html

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -425,7 +425,7 @@
                         <a href="https://en.wikipedia.org/wiki/Ben_McKee" target="_blank">Ben McKee</a> (bassiste) et
                         <a href="https://en.wikipedia.org/wiki/Daniel_Platzman" target="_blank">Daniel Platzman</a>
                         (batteur).
-                        Le groupe a été formé en 2009 et sorti ses premiers EP <em>Imagin Dragons</em> et <em>Hell and
+                        Le groupe a été formé en 2009 et sorti ses premiers EP <em>Imagin Dragons</em> (éponyme) et <em>Hell and
                             Silence</em> en 2010.
                     </p>
                     <p>
@@ -587,7 +587,7 @@
                                             alt="youtube link" /></a>
                                 </div>
                             </div>
-                            (1999)
+                            (1999) - éponyme
                         </li>
                         <li>
                             <div class="multi-link">
