fixed yt links TWS alt.html

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -582,7 +582,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#The_White_Stripes_et_De_Stijl_(1998%E2%80%932003)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#The_White_Stripes_et_De_Stijl_(1998%E2%80%932003)"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_nTcS8Bv6NCH3pw0qVoUkgSZeG-7XyXFB4"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
@@ -599,7 +599,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#The_White_Stripes_et_De_Stijl_(1998%E2%80%932003)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/watch?v=39NqfWklaAQ&list=OLAK5uy_mjBgh9lV7AS0zZWkM5sN9bMdjEQ6646l8&index=1"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_mjBgh9lV7AS0zZWkM5sN9bMdjEQ6646l8"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
@@ -616,7 +616,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#De_White_Blood_Cells_%C3%A0_Elephant_(2001%E2%80%932004)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/watch?v=7OyytKqYjkE&list=OLAK5uy_m8BqHi3Yx-2OxAJpOOGlsEwlltduN5QBw&index=1"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_m8BqHi3Yx-2OxAJpOOGlsEwlltduN5QBw"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
@@ -633,7 +633,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#De_White_Blood_Cells_%C3%A0_Elephant_(2001%E2%80%932004)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/watch?v=0J2QdDbelmY&list=OLAK5uy_nqckWPXwaoTc-dLTiYcL1kIAH0e9V3N-I&index=1"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_nqckWPXwaoTc-dLTiYcL1kIAH0e9V3N-I"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
@@ -650,7 +650,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#Get_Behind_Me_Satan_et_Icky_Thump_(2005%E2%80%932007)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/watch?v=jW8UlrtcEac&list=OLAK5uy_nusCy_RAXnnGHjUfkmLdX-DUssmxfUrBU&index=1"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_nusCy_RAXnnGHjUfkmLdX-DUssmxfUrBU"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
@@ -667,7 +667,7 @@
                                     <a href="https://fr.wikipedia.org/wiki/The_White_Stripes#Get_Behind_Me_Satan_et_Icky_Thump_(2005%E2%80%932007)"
                                         target="_blank"><img class="wiki-icon" src="../images/icons/wiki.png"
                                             alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/watch?v=1OjTspCqvk8&list=OLAK5uy_l0tyP6pUWbXe8Exa3z_mv_rOPQ8E8H59s&index=1"
+                                    <a href="https://www.youtube.com/playlist?list=OLAK5uy_l0tyP6pUWbXe8Exa3z_mv_rOPQ8E8H59s"
                                         target="_blank"><img class="yt-icon" src="../images/icons/yt.png"
                                             alt="youtube link" /></a>
                                 </div>
