changed TWS music presentation

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -682,7 +682,7 @@
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/7aBAo2pO8LvrN8mGba7MvA" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5" frameborder="0"
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -697,14 +697,15 @@
                         </div>
                         <div>
                             <div>
-                                <iframe src="https://www.youtube-nocookie.com/embed/1OjTspCqvk8"
+                                <iframe src="https://www.youtube-nocookie.com/embed/zS5fkPFUskQ"
                                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
                     <figcaption>
-                        Deux titres des The White Strips, Seven Nation Army (2003) et Icky Thump (2007)
+                        Deux titres des The White Strips, Seven Nation Army (2003) et I Just Don't Know What to Do With
+                        Myself (2003)
                     </figcaption>
                 </figure>
                 <span class="source">Source : wikipedia.org</span>
