W3C check (no frameborder in iframe) alt.html

--- a/music/alternative.html
+++ b/music/alternative.html
@@ -180,11 +180,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/2wA4NDDRLoEPyA4Zq6J1G1" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/7kzKAuUzOITUauHAhoMoxA" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -361,11 +361,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/2x8evxqUlF0eRabbW2JBJd" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/5FVd6KXrgO9B3JPmC8OPst" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -504,11 +504,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/62yJjFtgkhUrXktIoSjgP2" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/62yJjFtgkhUrXktIoSjgP2" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/6Q2JimwoGgG5W9HdmH1hmq" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/6Q2JimwoGgG5W9HdmH1hmq" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
@@ -678,11 +678,11 @@
                 </div>
                 <div class="spotify-integ">
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/47wPvRG8FEwbZP22UBgTQr" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/47wPvRG8FEwbZP22UBgTQr" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                     <div>
-                        <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5" frameborder="0"
+                        <iframe src="https://open.spotify.com/embed/track/64tSc0F8az64sF1olXiNl5" 
                             allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
