mini modif texte

--- a/music/electro.html
+++ b/music/electro.html
@@ -37,7 +37,7 @@
                 L'électro ou musique électronique, est un style de musique entièrement composé pour danser et
                 principalement joué dans des boîtes de nuit, raves et festivals.
                 Cette variété est produite et jouée par des DJ (Disc Jockey).
-                Il existe de nombreux festivals de musique électronique, les plus connus étant Tomorrowland en Belgique,
+                Il existe de nombreux festivals de musique électronique, le plus connu étant Tomorrowland en Belgique,
                 élu trois fois de suite comme « meilleur événement musical de l'année ». Il demeure aujourd'hui le
                 festival d'électro le plus connu au monde.
                 Chaque année, 400 000 festivaliers s'y retrouvent sur 2 week-ends du mois de juillet.
@@ -81,9 +81,9 @@
                         Par la suite, son morceau Wake Me Up est un des hits de l'été 2013 et bat de nombreux
                         records.
                         Il est alors considéré comme l'un des DJs les plus importants de la scène électronique.
-                        L'album sur lequel Avicii travaillait avant sa mort sort le 6 juin 2019 sous le nom de Tim.
                         Atteint d'une dépression,
                         il se suicide à l'âge de 28 ans le 20 avril 2018.
+                        L'album sur lequel Avicii travaillait avant sa mort sort le 6 juin 2019 sous le nom de Tim.
                         Ses principaux titres sont wake me up, I could be the one, SOS.
                         <span class="source">Source : Wikipédia </span>
                     </div>
@@ -133,7 +133,7 @@
                         </figure>
                         DJ, compositeur et producteur musical néerlandais, il se fait connaître mondialement avec
                         son titre Animals en 2013.
-                        Classé en 2016 par le DJ Magazine comme étant le meilleur DJ au monde,
+                        Classé en 2016 par DJ Magazine comme étant le meilleur DJ au monde,
                         il est très présent sur la scène musicale mondiale en mixant lors de grands festivals.
                         Il compose ses musiques majoritairement en studio, notamment avec le logiciel FL Studio.
                         Animals, sorti en juin 2013, est la chanson qui a révélé le DJ au public, se classant dans
