--- a/music/rap.html
+++ b/music/rap.html
@@ -36,8 +36,8 @@
                 </h2>
                 <div class="paragraph">
                     Le rap est un mouvement culturel et musical qui mêle le chant aux paroles,
-                    scandées sur un rythme rapide. Il tire ses origines du hip-hop, crée au début des années 1970 dans
-                    les ghettos aux États-Unis. En France, le mouvement hip-hop touche la jeunesse des cités.
+                    scandées sur un rythme rapide. Il tire ses origines du hip-hop, crée au début des années 70 dans
+                    les ghettos aux États-Unis. En France, le mouvement hip-hop touche principalement la jeunesse des cités.
                     En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier single rap
                     dans le monde.
                 </div>
@@ -247,7 +247,7 @@
                             </figcaption>
                         </figure>
                         <div class="paragraph">
-                            Membre des Casseurs-Flowteurs avec son ami Gringe et voix française de Saitama du manga One
+                            Membre des Casseurs-Flowteurs avec son ami Gringe et voix française de Saitama dans l'animé One
                             Punch Man, il sort en 2017 le titre "basique", avant de sortir
                             l'album la fête est finie, certifié disque de diamant. Orelsan a remporté trois
                             Victoires de la musique. Ses titres les plus populaires sont paradis,
@@ -277,7 +277,7 @@
                     </article>
                 </section>
 
-                <section id="rap us">
+                <section id="rapus">
                     <h2>
                         Rap US
                     </h2>
@@ -442,7 +442,7 @@
                         rap engagé. Certains
                         professeurs de français font même étudier des chansons au collège ou en ateliers d’écriture.
                         Le rap occupe 14 des 20 premières places du classement des artistes français les plus écoutés en
-                        streaming.
+                        streaming, ce qui en fait le genre de musique le plus populaire en France.
                         Les rappeurs les plus riches aujourd'hui sont: <br />
                         Lil Wayne,Ice Cube, Ronald ‘Slim’ Williams, Eminem, Master P, Kanye West, Russell Simmons, Dr.
                         Dre, Sean Combs (Diddy), JAY-Z, et bien d'autres.
