added pantera multi-link

--- a/music/metal.html
+++ b/music/metal.html
@@ -860,9 +860,19 @@
             <h2>
                 Groove metal
             </h2>
-            <p>
-                Le Groove metal se trouve juste entre le Heavy metal et le Death metal. <a
-                    href="https://fr.wikipedia.org/wiki/Pantera" target="_blank">Pantera</a>
+            <div class="parapgraph">
+                Le Groove metal se trouve juste entre le Heavy metal et le Death metal.
+                <div class="multi-link">
+                        <span>Pantera</span>
+                        <div>
+                            <a href="https://open.spotify.com/artist/14pVkFUHDL207LzLHtSA18" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Pantera" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/pantera" target="_blank"><img
+                                    class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </div>
+                    </div>
                 a été l'un des précurseurs du genre. Le genre est plus axé sur les vocales par rapport au Death metal et
                 se différencie surtout par le côté plus mélodique.
                 Le
@@ -871,7 +881,7 @@
                 sous-genre de metal alternatif). Beaucoup de groupes
                 actuels sont plus dans la tendance du Groove metal qui est une version plus modernisée du Heavy ou du
                 Thrash.
-            </p>
+            </div>
             <span class="source">Source : dude trust me</span>
             <p>
                 3 groupes connus :
